# plotters-piston-eeg

./: Cargo.toml  README.md
arduino_code/: arduino_2.txt  arduino_code.ino  arduino_code2.ino  captador_de_frequencia.ino
examples/: bar_test.rs  cpustat.rs  easyfft_display.rs  frequency_display.rs  frequency_reader.rs  list_ports.rs  spectrum_display.rs
